--- a/kuma/public/style.css
+++ b/kuma/public/style.css
@@ -772,10 +772,11 @@ select::-ms-expand {
 }
 
 /* For screens smaller than 576px */
+/* For screens smaller than 576px */
 @media (max-width: 576px) {
   .card {
-    width: 100%; /* Set width to full for single card per row */
-    margin: 1em 0; /* Adjust margin for full width */
+    width: 50%; /* Adjust width for two cards per row */
+    margin: 1em 0; /* Adjust margin for spacing */
   }
 
   .prev-btn,
@@ -784,6 +785,11 @@ select::-ms-expand {
   }
 }
 
+  .prev-btn,
+  .next-btn {
+    margin: 0.625em 0; /* Adjust margin for full width */
+  }
+ 
 
 
 
